# zyrox

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Dockerfile  PyPlugin.py  README.md  docker-build-linux-x86_64.sh  index.d.ts  tidy
.github/workflows/: build_linux_x86-64.yaml  build_macos_arm64.yaml
cmake/: quickjs.cmake
include/: ZyroxPlugin.h
include/Passes/: ControlFlowFlattening.h  IndirectBranch.h
include/core/: ZyroxCore.h  ZyroxMetaData.h  ZyroxPassOptions.h
include/passes/: BasicBlockSplitter.h  MBASub.hpp  SimpleIndirectBranch.h  StringEncryption.h
include/quickjs/: QuickConfig.h  QuickRt.h  QuickUtil.h
include/utils/: BasicBlockUtils.h  CryptoUtils.h  FunctionUtils.h  HashUtils.h  Logger.h  ModuleUtils.h  OpaqueTransformer.h  Random.h
src/: ZyroxPlugin.cpp
src/Passes/: BasicBlockSplitter.cpp  ControlFlowFlattening.cpp  IndirectBranch.cpp  MBASub.cpp  SimpleIndirectBranch.cpp  StringEncryption.cpp
src/core/: ZyroxCore.cpp  ZyroxMetaData.cpp  ZyroxPassOptions.cpp
src/passes/: BasicBlockSplitter.cpp  ControlFlowFlattening.cpp  IndirectBranch.cpp  MBASub.cpp  SimpleIndirectBranch.cpp  StringEncryption.cpp
src/quickjs/: QuickConfig.cpp  QuickRt.cpp
src/util/: BasicBlockUtils.cpp  CryptoUtils.cpp  FunctionUtils.cpp  HashUtils.cpp  ModuleUtils.cpp  OpaqueTransformer.cpp  Random.cpp
tests/: ZyroxConfig.js  compile.sh  compile_android.sh  main.c
